--- a/paginas/admin.phtml
+++ b/paginas/admin.phtml
@@ -135,7 +135,7 @@ foreach ($dadosApi as $produto) {
                             <input type="text" name="atributo_6Post" placeholder="Atributo 6 Produto" required>
                             <input type="number" name="id_categoriaPost" placeholder="Id Categoria" required>
                             <input type="file"  id="fotoProduto" name="fotoPost" accept="image/*" />
-
+                            <!-- <label for="fotoProduto" class="custom-file-upload">Escolher Foto</label> -->
 
                             <div class="p_btn">
                                 <button type="submit">Adicionar</button>
