--- a/paginas/cadastro.phtml
+++ b/paginas/cadastro.phtml
@@ -3,7 +3,6 @@
 
         <h2>CRIE SUA CONTAR TECNOLO</h2>
 
-
         <form id="form" action="login" method="post" class="form">
 
                 <input type="email" class="required" name="email" id="email" oninput="emailValidate()" placeholder="E-mail" required>
@@ -44,11 +43,7 @@
 
         <label for="termos1"> <input type="checkbox" id="termos1" name="termos"> Quero receber ofertas e novidades por e-mail, SMS, WhatsApp.</label>
         <label for="termos2"> <input type="checkbox" id="termos2" name="termos"> Li e estou de acordo com as <a href="erro">políticas da empresa e políticas de privacidade.</a></label>
-
     </div>
-
-    
-
 </section>
 
-<script src="paginas/validacoes/cadastro/post_cadastro.js"</script>
+<script src="paginas/validacoes/cadastro/post_cadastro.js"></script>
