--- a/paginas/endereco.phtml
+++ b/paginas/endereco.phtml
@@ -30,7 +30,7 @@
 
 
             <div class="btn">
-                <button type="submit" >Confirmar</button>
+                <button>Confirmar</button>
             </div>
 
         </form>
@@ -38,4 +38,4 @@
 </section>
 
 
-<script src="paginas/validacoes/endereco/post_endereco.js"</script>
+<script src="paginas/validacoes/endereco/post_endereco.js"></script>
