--- a/paginas/login.phtml
+++ b/paginas/login.phtml
@@ -1,11 +1,9 @@
-
-
 <section id="area_login">
     <div class="conteiner_login" style="overflow: hidden !important;">
 
         <h2>ENTRAR COM UMA CONTAR TECNOLO</h2>
 
-        <form method="POST" action="home" class="formlogin form">
+        <form method="POST" action="home" class="formLogin form">
 
             <input type="email" class="required" id="email" name="email" placeholder="E-mail" required >
             <span class="span-required" style="margin: 10px 0 0 10px; color:red; display: none;">E-mail inválido</span>
@@ -30,3 +28,5 @@
     </div>
 </section>
 
+
+<script src="paginas/validacoes/login/post_login.js"></script>
