--- a/paginas/login.phtml
+++ b/paginas/login.phtml
@@ -3,7 +3,7 @@
 
         <h2>ENTRAR COM UMA CONTAR TECNOLO</h2>
 
-        <form method="POST" action="home" class="formLogin form">
+    <form method="POST" action="paginas/validacoes/login/post_login.php" class="formLogin form" id="formLogin">
 
             <input type="email" class="required" id="email" name="email" placeholder="E-mail" required >
             <span class="span-required" style="margin: 10px 0 0 10px; color:red; display: none;">E-mail inválido</span>
@@ -30,3 +30,4 @@
 
 
 <script src="paginas/validacoes/login/post_login.js"></script>
+
