--- a/paginas/admin.phtml
+++ b/paginas/admin.phtml
@@ -171,7 +171,7 @@ foreach ($dadosApi as $produto) {
                                     <img src="paginas/validacoes/item/<?= htmlspecialchars($produto->foto) ?>" alt="<?= htmlspecialchars($produto->nome) ?>">
                                 </div>
 
-                                <form class="descricao> 
+                                <form class="descricao"> 
 
                             
                                 <input type=" number" name="idProdutoDelete" placeholder="ID do Produto" value="<?= htmlspecialchars($produto->id_item) ?>" hidden required>
