--- a/css/style.css
+++ b/css/style.css
@@ -2064,7 +2064,7 @@ footer {
                             width: 100%;
                             height: 40px;
 
-                            background-color: rgba(255, 255, 255, 0.205) !important;
+                            background-color: rgba(255, 255, 255, 0.123) !important;
                             border: solid 1px rgb(255, 255, 255);
                             border-radius: 50px;
                             color: white;
@@ -2113,7 +2113,7 @@ footer {
 
 
                         input::placeholder {
-                            color: white !important;
+                            color: rgba(255, 255, 255, 0.76) !important;
                         }
 
                         textarea {
